--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -10,12 +10,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
-
       - name: Check out repository code
         uses: actions/checkout@v4
-
-      - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
-      - run: echo "🖥️ The workflow is now ready to test your code on the runner."
 
       - name: Install Java
         uses: actions/setup-java@v3
@@ -35,25 +31,10 @@ jobs:
 
       - run: echo "🍏 This job's status is ${{ job.status }}."
 
-  Lint:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Check out repository code
-        uses: actions/checkout@v4
-      - name: Install Java
-        uses: actions/setup-java@v3
-        with:
-          distribution: 'temurin'
-          java-version: '17'
-      - name: Install Gradle
-        uses: gradle/gradle-build-action@v2
-      - name: Run Gradle lint
-        run: ./gradlew lint
-
   Post-to-Slack:
     name: Post to Slack on failure
     runs-on: ubuntu-latest
-    needs: [Build-and-Test, Lint]
+    needs: [Build-and-Test]
     if: failure()
     steps:
       - name: Post to Slack
